add fixed cost collector